:fix: align menu title left

--- a/sass/restaurants_1.scss
+++ b/sass/restaurants_1.scss
@@ -80,7 +80,7 @@ body{
     }
     &__title{
         display: flex;
-        justify-content: center;
+        justify-content: space-between;
         align-items: center;
         gap: 20px;
         margin-bottom: 30px;
